--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -31,5 +31,5 @@ jobs:
 
       - name: Run tests with testthat
         run: |
-          Rscript -e "testthat::test_dir('tests/testthat')"  # Run the tests located in the tests/testthat directory
+          Rscript -e 'testthat::test_dir("tests/testthat")'  # Run the tests located in the tests/testthat directory
         shell: Rscript {0}  # Execute test script via R
