--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -15,19 +15,21 @@ jobs:
     runs-on: macOS-latest  # Running on macOS
 
     steps:
+      # Checkout the repository code
       - name: Checkout code
-        uses: actions/checkout@v2  # Checkout the repository code
+        uses: actions/checkout@v3
 
+      # Set up R environment with the latest stable version
       - name: Set up R
-        uses: r-lib/actions/setup-r@v2  # Set up R environment
-        with:
-          r-version: 'release'  # Use the latest stable version of R
+        uses: r-lib/actions/setup-r@v2
 
-      - name: Install dependencies
-        run: |
-          install.packages("testthat")  # Install the testthat package
-          install.packages("devtools")  # You can also install devtools if needed
-        shell: Rscript {0}  # Run the installation via R
+      # Install dependencies including testthat and any other necessary packages
+      - name: Install packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            testthat
+            devtools
 
       - name: Run tests with testthat
         run: |
