--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Formats and plots results from SuSiEx
 Version: 0.1.0
 Author: Amelia Edmondson-Stait
 Maintainer: Amelia Edmondson-Stait <amelia.edmondson-stait@ed.ac.uk>
-Description: 
+Description: R pakcage to format data and plots from SuSiEx.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
@@ -12,3 +12,4 @@ RoxygenNote: 7.2.1
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: data.table, dplyr, ggplot2, purrr, stringr, tidyr, topr, ggrepel, cowplot
